[metadata]
name = syslogmp
version = attr: syslogmp.VERSION
url = https://homework.nwsnet.de/releases/76d6/#syslogmp
author = Jochen Kupperschmidt
author_email = homework@nwsnet.de
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications
    Topic :: Internet
    Topic :: System :: Logging
    Topic :: System :: Networking :: Monitoring
    Topic :: System :: Systems Administration
license = MIT
license_file = LICENSE
description = A parser for BSD syslog protocol (RFC 3164) messages
long_description = file: README.rst, CHANGES.rst
keywords = irc, webhook
platforms = any

[options]
zip_safe = True
python_requires = >=3.6
packages = find:
package_dir = =src

[options.packages.find]
where = src
